Add outer join table search